--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     src="images/pfp2.0.jpg"
                     alt="SRNF pfp"/>
         </div>
-        <h1>@srnf</h1>
+        <h1>S.R.N.F eSports</h1>
 
         <a class="tile" href="https://www.tiktok.com/@s.r.n.f">
             <div class="icon">
