--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S.R.N.F social-links</title>
+    <title> src="images/pfp2.0.jpg"
+                    alt="SRNF pfp"/> S.R.N.F social-links</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
