--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S.R.N.F eSports</title>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="icon" href="images/pfp2.0.jpg" type="image/x-icon">
+    <link rel="icon" href="pfp2.1.png" type="image/x-icon">
                     
 </head>
 <body>
