--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                     alt="SRNF pfp"/>
         </div>
         <h1>S.R.N.F eSports</h1>
+        <h2>Welcome to S.R.N.F eSports!<h2>
+
+        Here you'll find links to all of our social media, streams, and other content. Follow us to stay up-to-date on the latest news, events, and gameplay from our competitive gaming community.
 
         <a class="tile" href="https://www.tiktok.com/@s.r.n.f">
             <div class="icon">
